Changes for Perl extension ADAMK-Repository

0.10 to be released
	- Added distributions_like method

0.09 Sat 18 Apr 2009
	- Updating to Module::Install::DSL 0.83
	- Updating Module::Changes::ADAMK dependency to 0.09
	- Heavy refactoring of the codebase
	  (Everything useful is now a Role class)
	- Added support for detecting the Module::Install version

0.08 Mon 13 Apr 2009
	- Moved ADAMK::SVN to ADAMK::Role::SVN
	- Moved ADAMK::Repository::Util to ADAMK::Util
	- Moved tracing logic into ADAMK::Mixin::Trace
	- Updating File::Find::Rule::Perl dependency to 1.06
	- Updating Module::Changes::ADAMK dependency to 0.08

0.07 Sun 12 Apr 2009
	- Added ADAMK::Shell
	- Added update_current_perl_versions command
	- Updated to use Module::Changes::ADAMK 0.05

0.06 Mon 26 Jan 2009
	- Upgrading to inc::Module::Install::DSL 0.82
	- Sort all files and dirs as we read them
	- Skip Araxis tests when we can't find it
	- Added ADAMK::Distribution::Export
	- Added ADAMK::Distribution::Checkout
	- Abstracting svn basics into ADAMK::SVN
	- Integrating with Module::Changes::ADAMK

0.05 Tue 23 Dec 2008
	- Adding support for distribution exporting
	- ADAMK::Release->distribution changed to distname
	- ADAMK::Release->distribution now points to a ADAMK::Distribution
	- ADAMK::Release->export works
	- ADAMK::Repository->compare_export_latest added
	- ADAMK::Repository->compare_export_stable works

0.03 Wed 17 Nov 2008
	- Adding calculation of the latest release for a distribution
	- Adding support for extracting a release into a temp directory
	- Adding diff of svn to most recent release (via Araxis)

0.02 Thu 13 Nov 2008
	- Adding distribution loading
	- Adding preload support

0.01 Mon 10 Nov 2008
	- Creating initial skeleton