@@ -22,9 +22,10 @@ use File::Find::Rule         0.30 ();
 use File::Find::Rule::VCS    1.05 ();
 use File::Find::Rule::Perl   1.06 ();
 use IPC::Run3               0.034 ();
-use Archive::Extract         0.30 ();
+use Text::Table             1.114 ();
 use Params::Util             0.35 ();
 use CPAN::Version             5.5 ();
+use Archive::Extract         0.30 ();
 use Object::Tiny::XS         1.01 ();
 use PPI                     1.203 ();
 use Module::Changes::ADAMK   0.09 ();
