@@ -1,7 +1,11 @@
 Changes for Perl extension ADAMK-Repository
 
 0.10 to be released
-	- Added distributions_like method
+	- Added ADAMK::Util::ljoin
+	- Added ADAMK::Util::table
+	- Added ADAMK::Repository::distributions_like
+	- Added ADAMK::Shell::usage
+	- Added ADAMK::Shell::report_module_install_versions
 
 0.09 Sat 18 Apr 2009
 	- Updating to Module::Install::DSL 0.83
